--- a/src/components/Desktop/Window/Window.css
+++ b/src/components/Desktop/Window/Window.css
@@ -29,7 +29,7 @@
 	animation-fill-mode: forwards;
 }
 #QuitButton {
-	border-radius: 0 0.75vmin 0 0;
+	border-radius: 0 1vmin 0 0;
 	background-color: #C55966;
 	animation: quitRevertColorChange 0.2s ease-in;
 	animation-fill-mode: forwards;
@@ -59,6 +59,21 @@
 	font: 125% "Outfit";
 	color: white;
 	animation: showTitle 1s ease-in;
+}
+
+.content {
+	margin: 0;
+	position: absolute;
+	left: 0;
+	right: 0;
+	margin-left: auto;
+	margin-right: auto;
+	top: 10%;
+}
+
+.Scrollbar {
+	position: absolute;
+	right: 0;
 }
 
 @keyframes showTitle {
